Remove "vous ne participez a aucun projet" if no project and user!=request.user

--- a/users/templates/user_detail.html
+++ b/users/templates/user_detail.html
@@ -40,8 +40,10 @@
         {% for project in user.project_set.all %}
         <b><a href="{% url 'view_project' project.id %}">{{project.title}}</a></b> - {{project.short_description}}</br>
         {% empty %}
+        {%if request.user == user %}
         Vous ne participez a aucun projet :'(</br>
         <a href="{% url 'projects_home' %}">Venez vous inscrire a l'un ou l'autre.</a>
+        {% endif %}
         {% endfor %}
     </p>
   </div>
