--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -39,7 +39,7 @@
     <p>UrLab se trouve sur le campus du Solbosh, à l'ULB et est ouvert à tout le monde.</p>
     <iframe width='100%' height='300px' frameBorder='0' src='https://a.tiles.mapbox.com/v4/c4ptaincrunch.o1n42mc8/attribution,zoompan,zoomwheel,geocoder.html?access_token=pk.eyJ1IjoiYzRwdGFpbmNydW5jaCIsImEiOiJUdWVRSENNIn0.qssi5TBLeBinBsXkZKiI6Q#14/50.812919/4.38443799999999'></iframe>
     <p>
-    Pour savoir si nous sommes ouverts et qui s'y trouve actuellement, allez demander à <a href="">Pamela</a></p>
+    Pour savoir si nous sommes ouverts et qui s'y trouve actuellement, allez demander à <a href="{% url "pamela_list" %}">Pamela</a></p>
   </div>
 </div>
 
