--- a/space/templates/pamela.html
+++ b/space/templates/pamela.html
@@ -89,10 +89,10 @@ var PamelaNoobsBox = React.createClass({
 
 var Pamela = React.createClass({
     render: function(){
-        var last = new Date(this.state.last_updated);
-        var dt = Math.round((new Date() - last)/1000);
         return <div className="row-fluid">
-            <h2 className="col-sm-12"><small>Mis à jour il y a {dt} secondes</small></h2>
+            <h2 className="col-sm-12">
+                <small>Mis à jour il y a {this.state.age} secondes</small>
+            </h2>
             <div className="col-md-6 col-sm-12">
                 <h3>Membres de UrLab</h3>
                 <PamelaUsersBox users={this.state.users}/>
@@ -105,7 +105,7 @@ var Pamela = React.createClass({
     },
     getInitialState: function(){
         return {
-            last_updated: "1970-01-01",
+            age: "XXX",
             unknown_mac: [], 
             users: []
         };
