--- a/events/templates/event_time.html
+++ b/events/templates/event_time.html
@@ -1,7 +1,7 @@
 <span class="fa fa-calendar" aria-hidden="true"></span>
 
 {% if event.start == None %}
-    Cet événement n'a pas encore de date prévue
+    Cet événement n'a pas encore de date prévue <br>
 {% elif event.has_no_duration %}
     Le {{event.start|date:"l d F Y"}}, à {{event.start|date:"H:m"}}.
 {% elif event.is_only_a_day %}
