--- a/events/templates/event_detail.html
+++ b/events/templates/event_detail.html
@@ -57,14 +57,16 @@
       {{event.description|markdown}}
     </div>
     <div class="col-md-6">
-      <h2>Membres présents</h2>
-      {{event.meeting.membersPresent.all|join:","|default:"Aucun membre présent"}}
-      <a href=""><i class="fa fa-plus" aria-hidden="true"></i></a>
-
+      {% if event.is_today_or_before %}
+        <h2>Membres présents</h2>
+        {{event.meeting.membersPresent.all|join:","|default:"Aucun membre présent"}}
+        <a href=""><i class="fa fa-plus" aria-hidden="true"></i></a>
+      {% endif %}
       <h2>Ordre du jour</h2>
       {{event.meeting.OJ|markdown}}
 
-      <h2>PV</h2>
+      <h2>Compte rendu</h2>
+      <p>Le pad pour prendre note en live se trouve là bas: <a href="{{event.meeting.pad}}">{{event.meeting.pad}}</a></p>
       {{event.meeting.PV|markdown}}
     </div>
   {% endif%}
