--- a/events/templates/add_event.html
+++ b/events/templates/add_event.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
+{% load static %}
 
 {% block head %}
     {{ form.media  }}
+    <link href="{% static "css/bootstrap-multiselect.css" %}" rel="stylesheet">
+    <script type="text/javascript" src="{% static "js/bootstrap-multiselect.js" %}"></script>
 {% endblock %}
 
 {% block content %}
@@ -15,4 +18,17 @@
     </button>
     {% endbuttons %}
 </form>
+
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('#id_interested').multiselect({
+            enableFiltering: true,
+            filterBehavior: 'text',
+            buttonWidth: '100%',
+            enableCaseInsensitiveFiltering: true,
+
+        });
+    });
+</script>
+
 {% endblock %}
