--- a/projects/templates/add_project.html
+++ b/projects/templates/add_project.html
@@ -25,14 +25,14 @@
             enableFiltering: true,
             filterBehavior: 'text',
             buttonWidth: '100%',
+            enableCaseInsensitiveFiltering: true,
         });
-    });
-    $(document).ready(function() {
         $('#id_dependencies').multiselect({
             enableFiltering: true,
             filterBehavior: 'text',
             disableIfEmpty: true,
             buttonWidth: '100%',
+            enableCaseInsensitiveFiltering: true,
         });
     });
 </script>
