--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -23,6 +23,10 @@
         <span class="fa fa-calendar-o" aria-hidden="true"></span>
         Evénements futurs
     </h1>
+    <p>
+      Vous pouvez vous abonner à notre flux ics (ical) pour être toujours au courant des derniers événements :
+      <a href="http://uralb.be/events/urlab.ics">http://uralb.be/events/urlab.ics</a>
+    </p>
     {% if future %}
         {% for event in future %}
           {% include "event_card.html" %}
