--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -25,7 +25,7 @@
     </h1>
     <p>
       Vous pouvez vous abonner à notre flux ics (ical) pour être toujours au courant des derniers événements :
-      <a href="http://uralb.be/events/urlab.ics">http://uralb.be/events/urlab.ics</a>
+      <a href="http://urlab.be/events/urlab.ics">http://urlab.be/events/urlab.ics</a>
     </p>
     {% if future %}
         {% for event in future %}
