--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -21,7 +21,7 @@
     </head>
     <body>
 
-        <nav class="navbar navbar-default navbar-static-top navbar-inverse">
+        <nav class="navbar navbar-default navbar-static-top">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#menuNavbar">
@@ -29,7 +29,9 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/">UrLab</a>
+                    <a class="navbar-brand" href="/">
+                        <img src="/static/img/space_invader.png" height=20 width=20 />
+                    </a>
                 </div>
                 <div class="collapse navbar-collapse" id="menuNavbar">
                     <ul class="nav navbar-nav">
@@ -48,11 +50,6 @@
 
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li style="background-color: #337AB7">
-                                <p class="navbar-text" style="color: white;">
-                                    This is a Beta, do not play with money yet ;)
-                                </p>
-                        </li>
                         {% if request.user.is_authenticated %}
                             <li class="dropdown">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
