--- a/incubator/templates/home.html
+++ b/incubator/templates/home.html
@@ -7,7 +7,7 @@
 
     <div class="col-md-8">
         {% if message and message.content != "" %}
-            <div class="alert alert-info" role="alert">
+            <div class="alert alert-danger" role="alert">
                 {{message.content|markdown}}
 
             </div>
