--- a/projects/templates/projects_home.html
+++ b/projects/templates/projects_home.html
@@ -10,7 +10,13 @@
 
 
 <div class="page-header">
-  <h1>Incubateur à projets</h1>
+  <h1>
+    Incubateur à projets
+    <a href="{% url "add_project" %}" class="btn btn-success">
+      <span class="fa fa-plus" aria-hidden="true"></span>
+          Proposer un projet
+    </a>
+  </h1>
 </div>
 <p>
     Vous trouverez ici une grande partie des projets (en cours, sous forme de proposition ou finis) à UrLab. Tous ces projets sont ouverts à tous, n'hésitez pas à vous rajouter dans un projet pour aider, apprendre ou juste regarder.
