--- a/events/templates/event_time.html
+++ b/events/templates/event_time.html
@@ -3,9 +3,9 @@
 {% if event.start == None %}
     Cet événement n'a pas encore de date prévue <br>
 {% elif event.has_no_duration %}
-    Le {{event.start|date:"l d F Y"}}, à {{event.start|date:"H:m"}}.
+    Le {{event.start|date:"l d F Y"}}, à {{event.start|date:"H:i"}}.
 {% elif event.is_only_a_day %}
-    Le {{event.start|date:"l d F Y"}}, de {{event.start|date:"H:m"}} à {{event.stop|date:"H:m"}}.
+    Le {{event.start|date:"l d F Y"}}, de {{event.start|date:"H:i"}} à {{event.stop|date:"H:i"}}.
 {% else %}
     Du {{event.start|date:"l d F Y à H:i"}} au {{event.stop|date:"l d F Y à H:i"}}.<br>
 {% endif %}
