Add titles to every page

--- a/events/templates/add_event.html
+++ b/events/templates/add_event.html
@@ -2,6 +2,10 @@
 {% load bootstrap3 %}
 {% load static %}
 
+{% block title %}
+Formulaire d'événement
+{% endblock %}
+
 {% block head %}
     {{ form.media  }}
     <link href="{% static "css/bootstrap-multiselect.css" %}" rel="stylesheet">
