--- a/events/templates/event_detail.html
+++ b/events/templates/event_detail.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load formatting %}
 
+{% block title %}
+{{event.title}}
+{% endblock %}
+
 {% block content %}
 
 <ol class="breadcrumb">
