--- a/events/templates/events_home.html
+++ b/events/templates/events_home.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block title %}
+Evénements à UrLab
+{% endblock %}
+
 {% block content %}
 
 <ol class="breadcrumb">
