--- a/projects/templates/projects_home.html
+++ b/projects/templates/projects_home.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block title %}
+Projets à UrLab
+{% endblock %}
 
+{% block content %}
 
 <ol class="breadcrumb">
   <li><a href="/">UrLab</a></li>
