--- a/space/templates/pamela.html
+++ b/space/templates/pamela.html
@@ -3,6 +3,10 @@
 {% load staticfiles %}
 {% load humanize %}
 
+{% block title %}
+PAMELA
+{% endblock %}
+
 {% block content %}
 <div class="page-header">
     <h1>Pamela
