--- a/users/templates/user_detail.html
+++ b/users/templates/user_detail.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load formatting %}
 
+{% block title %}
+Profil de {{user.username}}
+{% endblock %}
+
 {% block content %}
 
 <ol class="breadcrumb">
