--- a/users/templates/user_form.html
+++ b/users/templates/user_form.html
@@ -2,6 +2,10 @@
 {% load bootstrap3 %}
 {% load static %}
 
+{% block title %}
+Changez votre profil
+{% endblock %}
+
 {% block head %}
     {{ form.media  }}
 {% endblock %}
