--- a/events/templates/meeting_form.html
+++ b/events/templates/meeting_form.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
 
+{% block title %}
+Formulaire de réunion
+{% endblock %}
+
 {% block head %}
     {{ form.media  }}
 {% endblock %}
