--- a/incubator/templates/registration/login.html
+++ b/incubator/templates/registration/login.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
 
+{% block title %}
+Connexion
+{% endblock %}
+
 {% block content %}
 
 <div class="row">
