--- a/incubator/templates/wiki/base.html
+++ b/incubator/templates/wiki/base.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load sekizai_tags i18n wiki_tags %}
 
+{% block title %}
+{% block wiki_pagetitle %}{% endblock %} - Wiki
+{% endblock %}
+
 {%block head %}
  <link href="{{ STATIC_URL  }}wiki/bootstrap/css/wiki-bootstrap.min.css" rel="stylesheet">
 {%endblock%}
