--- a/projects/templates/add_project.html
+++ b/projects/templates/add_project.html
@@ -2,6 +2,10 @@
 {% load bootstrap3 %}
 {% load static %}
 
+{% block title %}
+Formulaire de projet
+{% endblock %}
+
 {% block head %}
     {{ form.media  }}
     <link href="{% static "css/bootstrap-multiselect.css" %}" rel="stylesheet">
