--- a/users/templates/balance.html
+++ b/users/templates/balance.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load bootstrap3 %}
 
+{% block title %}
+Ardoise
+{% endblock %}
+
 {% block "head" %}
     {{ form.media  }}
 {% endblock %}
