--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -13,6 +13,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% bootstrap_css %}
         {% bootstrap_javascript jquery=1 %}
+
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
         <link href="{% static "css/style.css" %}" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         {% render_block "css" %}
