--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -80,6 +80,9 @@
         </nav>
 
         <div class="container">
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+        {% endfor %}
         {% block content %}
         {% endblock %}
         </div>
