--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -85,7 +85,7 @@
         {% block content %}
         {% endblock %}
         </div>
-        <!-- <footer class="footer">
+        <footer class="footer">
           <div class="container">
             <p class="text-muted">
                 Made with love at
@@ -99,25 +99,6 @@
                 Scientia vincere tenebras
             </p>
           </div>
-        </footer> -->
-        <footer class="container base-footer"> <!-- base-footer -->
-            <div class="row"> <!-- base-footer-row -->
-                <div class="col-sm-4 base-footer-opening"> <!-- base-footer-opening -->
-                    <img src="/static/img/opening/week-2w.png" width="100%" height="auto"/>
-                </div>
-                <div class="col-sm-4 base-footer-info"> <!-- base-footer-info -->
-                    <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/space/pamela">Pamela</a></li>
-                        <li><a href="/wiki/">Wiki</a></li>
-                        <li></li>
-                        <li>...</li>
-                    </ul>
-                </div>
-                <div class="col-sm-4 base-map"> <!-- base-map -->
-                    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=zPnchbKdsavc.kWC7JrWya-pE&z=14" width="100%" height="250px"></iframe>
-                </div>
-            </div>
         </footer>
         {% render_block "js" %}
     </body> 
