--- a/incubator/templates/base.html
+++ b/incubator/templates/base.html
@@ -52,6 +52,7 @@
 
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/about/">About</a></li>
                         {% if request.user.is_authenticated %}
                             <li class="dropdown">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
